--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
               <span class="author-block">
                 <a href="https://leexinhao.github.io/">Xinhao Li</a><sup>1,2</sup>,</span>
               <span class="author-block">
-                <a href="">Yichun Yang</a><sup>1</sup>,
+                <a>Yichun Yang</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href=""">Rui Huang</a><sup>1</sup>,
+                <a>Rui Huang</a><sup>1</sup>,
             </span>
             <span class=" author-block">
                   <a href="https://wanglimin.github.io/">Limin Wang</a><sup>1,2</sup>,
