Replace the yarn emoji with a yarn image

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title is-bold">
-              <span style="vertical-align: middle">🧶 FIBER</span>
+              <span style="vertical-align: middle; justify-content: center; display: flex;"><img src="./static/images/yarn.png" style="height: 1em; margin-right: 10px;"/> FIBER</span>
             </h1>
             <h2 class="title is-3 publication-title">Fine-grained Video-Text Retrieval: A New Benchmark and Method</h2>
             <div class="is-size-5 publication-authors">
