--- a/index.html
+++ b/index.html
@@ -662,6 +662,16 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
+      <pre><code>@misc{xu2024finegrainedvideotextretrievalnew,
+  title={Fine-grained Video-Text Retrieval: A New Benchmark and Method}, 
+  author={Yifan Xu and Xinhao Li and Yichun Yang and Rui Huang and Limin Wang},
+  year={2024},
+  eprint={2501.00513},
+  archivePrefix={arXiv},
+  primaryClass={cs.CV},
+  url={https://arxiv.org/abs/2501.00513}, 
+}
+}</code></pre>
     </div>
   </section>
 
